--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       crossorigin="anonymous"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet" /> 
     <script src="https://kit.fontawesome.com/f6f5eb16ab.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
